OW-591 - added in additional fields - displays a "-" if no data is present - removed blue highlight when upload is clicked

--- a/src/components/upload-portfolio/UploadWidget.css
+++ b/src/components/upload-portfolio/UploadWidget.css
@@ -53,6 +53,10 @@ div.componentStyle {
   border: 1px solid #118917;
 }
 
+.buttonContainer button:focus {
+  outline: 0;
+}
+
 .textBold {
   composes: baseFontBold from '../../static/css-components/fonts.css';
 }
