--- a/src/components/assets-flight/Flight.css
+++ b/src/components/assets-flight/Flight.css
@@ -1,8 +1,10 @@
 .flightComponent{
     display: flex;
+    flex-direction: row;
     padding: 2% 1%;
 }
 
 .flight{
     flex: 1;
+    width: 50%;
 }
