--- a/src/components/assets-flight/Flight.css
+++ b/src/components/assets-flight/Flight.css
@@ -1,10 +1,11 @@
 .flightComponent{
     display: flex;
     flex-direction: row;
-    padding: 2% 1%;
+    padding: 2% 10px;
 }
 
 .flight{
-    flex: 1;
+    padding: 0 10px;
+    /*flex: 1 0 50%;*/
     width: 50%;
 }
