--- a/src/components/assets-flight/sub-components/FlightItem.css
+++ b/src/components/assets-flight/sub-components/FlightItem.css
@@ -3,7 +3,7 @@
     box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
     border: 1px solid #EEEEEE;
     border-radius: 8px;
-    margin: 0% 2%;
+    /*margin: 0% 2%;*/
     padding: 1%
 }
 
