scrollbar hiding attempt

--- a/src/components/assets-flight/sub-components/FlightItem.css
+++ b/src/components/assets-flight/sub-components/FlightItem.css
@@ -7,7 +7,14 @@
   padding: 1%;
   overflow-y: scroll;
   max-height: 600px;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  -ms-overflow-style: none;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 
 .flightTitle {
   display: flex;
