OW-15 - creation of log in page

--- a/src/static/global.css
+++ b/src/static/global.css
@@ -1,4 +1,5 @@
-.globalStyles{
-    composes: baseFont from "./css-components/fonts.css";
-    font-size: 15px;
+.globalStyles {
+  composes: baseFont from "./css-components/fonts.css";
+  font-size: 15px;
+  height: 100%;
 }
