--- a/src/static/reset.css
+++ b/src/static/reset.css
@@ -3,6 +3,10 @@
    License: none (public domain)
 */
 
+#app {
+  height: 100%;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -16,41 +20,49 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-    display: block;
+  display: block;
 }
+
 body {
-    line-height: 1;
+  line-height: 1;
 }
+
 ol, ul {
-    list-style: none;
+  list-style: none;
 }
+
 blockquote, q {
-    quotes: none;
+  quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  content: '';
+  content: none;
 }
 
-html,body { height:100%; }
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+html, body {
+  height: 100%;
+}
 
 body {
-    background: url('../images/common/ACUO-watermark.svg') no-repeat 50% fixed;
+  background: url('../images/common/ACUO-watermark.svg') no-repeat 50% fixed;
 }
 
 /*
@@ -61,11 +73,12 @@ body {
  */
 /* 1 */
 .ie9 img[src$=".svg"] {
-    width: 100%;
+  width: 100%;
 }
+
 /* 2 */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    img[src$=".svg"] {
-        width: 100%;
-    }
+  img[src$=".svg"] {
+    width: 100%;
+  }
 }
