[LOGIC] @Login + @TwoFA ::: Login in after TwoFA page stores timestamp(current time of login + 24hrs) into browswer's localstorage as property loginAt. A check will be performed on load of each page to compare current time with loginAt. Once loginAt < current-time, user will be redirected to login page

--- a/src/components/navigation-bar/NavigationBar.css
+++ b/src/components/navigation-bar/NavigationBar.css
@@ -62,11 +62,13 @@
 .nav .menuIcon#navSetting{
     float: right;
     margin-top: 20px;
+    cursor: pointer;
 }
 
 .nav .menuIcon#navLogout{
     float: right;
     margin-top: 20px;
+    cursor: pointer;
 }
 
 
@@ -109,3 +111,7 @@
   /*display: block;*/
   line-height: 1.8em;
 }
+
+/*.logout_btn, .settings_btn {
+ cursor: pointer;
+}*/
