[LOGIC] @Login + @2FA pages ::: Added error checking for password and 2FA key respectively. Password has to be alphanumeric and has at least 8 characters while only character  matching applies for 2FA.

--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -51,6 +51,13 @@
   cursor: pointer;
 }
 
+.pw_error{
+ color: red;
+ font-style: italic;
+ text-align: left;
+ height: 1em;
+}
+
 .input input {
   width: calc(100% - 48px);
   line-height: 54px;
