--- a/src/components/twoFA/TwoFA.css
+++ b/src/components/twoFA/TwoFA.css
@@ -54,6 +54,13 @@
  cursor: pointer;
 }
 
+.key_error{
+ color: red;
+ font-style: italic;
+ text-align: left;
+ height: 1em;
+}
+
 .input input {
   width: calc(100% - 48px);
   line-height: 54px;
