--- a/src/components/assets/Assets.css
+++ b/src/components/assets/Assets.css
@@ -1,7 +1,7 @@
 .assetsComponent{
     display: flex;
     flex-direction: row;
-    padding: 2% 10px;
+    padding: 30px 10px 0 10px;
 }
 
 .assetsPanels{
