--- a/src/components/assets/subcomponent/deployedViews/TableView/AssetsHomeTableView.css
+++ b/src/components/assets/subcomponent/deployedViews/TableView/AssetsHomeTableView.css
@@ -1,8 +1,7 @@
 .tableView{
- /*border: 1px blue dashed;*/
  display: flex;
  flex-direction: column;
- flex: 0 0 auto;
- height: 100%;
+ flex: 1;
+ height: inherit;
  overflow-y: hidden;
 }
