[LOGIC] @Selection.js ::: Addded logic to initialise component state to track required popups for variation and initial margin allocations

--- a/src/components/pledge-selection/Selection.css
+++ b/src/components/pledge-selection/Selection.css
@@ -188,9 +188,19 @@
   border-bottom: none;
 }
 
+.selTable > tr{
+  position: relative;
+}
+
 td{
   padding: 6px 4px;
   line-height: 16px;
+}
+
+.selTable > tr > td:last-child{
+ padding:0;
+ margin: 0;
+ width: 0;
 }
 
 .notAllocated{
