--- a/src/components/pledge-selection/popup-allocate.css
+++ b/src/components/pledge-selection/popup-allocate.css
@@ -1,23 +1,8 @@
-.bgScreen{
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(0,0,0,0.5);
-  color: white;
-  z-index: 100;
-}
-
-.popupHolder{
- height: 100%;
- width: 100%;
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-items: center;
- border: 1px red solid;
-}
-
 .popup{
+ border: 1px solid #DEDEDE;
+ position: absolute;
+ right: 0;
+
  background-color: white;
  color: black;
  height: 250px;
