--- a/src/components/margin-agreement/MarginAgreementList.css
+++ b/src/components/margin-agreement/MarginAgreementList.css
@@ -130,6 +130,7 @@
   flex: 4 4 auto;
 }
 
+
 .sectionText {
   font-weight: bold;
   margin-top: 12px;
@@ -252,6 +253,10 @@
   font: 13px Helvetica;
 }
 
+.out{
+ background-color: #F6FAFF;
+}
+
 .currency {
   color: #9b9b9b;
   text-align: right;
@@ -293,6 +298,19 @@
   text-align: center;
   margin: auto 0;
   line-height: 30px;
+}
+
+.direction{
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+ margin-bottom: 10px;
+}
+
+.direction > div{
+ border-bottom: 1px solid rgb(20,20,20);
+ width: 50px;
+
 }
 
 .marginValue {
