--- a/src/components/pledge-selection/Selection.css
+++ b/src/components/pledge-selection/Selection.css
@@ -172,6 +172,12 @@
 
 .selTable tr{
   border-bottom: 1px solid rgba(151,151,151,0.35);
+
+  background-color: white;
+  -webkit-transition: background-color 250ms linear;
+  -moz-transition: background-color 250ms linear;
+  -o-transition: background-color 250ms linear;
+  transition: background-color 250ms linear;
 }
 
 .selTable thead{
@@ -215,6 +221,11 @@ td{
 }
 .notAllocated .notAlcText{
   padding: 30px 20px;
+  background-color: white;
+  -webkit-transition: background-color 250ms linear;
+  -moz-transition: background-color 250ms linear;
+  -o-transition: background-color 250ms linear;
+  transition: background-color 250ms linear;
 }
 .totalTable1 {
   width:102.22px;
