OW-622, [UI] @Deployed Page::: Disabled overflow-X scroll and made CSS responsible to determine Departure and Arrival Widget's table window height

--- a/src/components/assets-flight/sub-components/FlightItem.css
+++ b/src/components/assets-flight/sub-components/FlightItem.css
@@ -5,9 +5,9 @@
   border-radius: 8px;
   padding: 1%;
 
-  height: 400px;
+  height: 504px;
 
-  overflow-y: hidden;
+  overflow: hidden;
   max-height: 600px;
   -ms-overflow-style: -ms-autohiding-scrollbar;
   -ms-overflow-style: none;
