--- a/src/components/assets-flight/sub-components/FlightItemTable.css
+++ b/src/components/assets-flight/sub-components/FlightItemTable.css
@@ -1,7 +1,9 @@
 .flightItemTableWindow{
- overflow: scroll;
- height: 332px;
- width: calc(100% + 100px)
+ overflow-y: scroll;
+ overflow-x: hidden;
+ height: calc(100% - 65px);
+ width: calc(100% + 100px);
+ margin-top: 5px;
 }
 .flightItemTable {
   display: table;
