--- a/src/components/assets-flight/sub-components/FlightItemTable.css
+++ b/src/components/assets-flight/sub-components/FlightItemTable.css
@@ -2,12 +2,12 @@
  overflow-y: scroll;
  overflow-x: hidden;
  height: calc(100% - 65px);
- width: calc(100% + 100px);
+ width: 100%;
  margin-top: 5px;
 }
 .flightItemTable {
   display: table;
-  width: calc(100% - 100px);
+  width: 100%;
   margin-top: 5px;
   table-layout: fixed;
 }
