OW-347 [UI] @Dashboard ::: Added pledge status in table row

--- a/src/components/table/sub-components/TableRow.css
+++ b/src/components/table/sub-components/TableRow.css
@@ -35,6 +35,9 @@
 .statusDispute {
   background-color: #CE0B24;
 }
+.statusPledge {
+  background-color: #0170B0;
+}
 
 .hoverable {
   -webkit-transition: background-color 250ms linear;
