--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -120,28 +120,25 @@
  border-right: 1px solid white
 }
 
-/* --- Tooltip Text --- */
-/*.tooltip{
- position: relative;
-}
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: black;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
+/* ----- Popup ----- */
+.screen{
+ height: 100%;
+ width: 100%;
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: center;
+ position: absolute;
 
-    position: absolute;
-    z-index: 1;
-    top: 100%;
-    left: 50%;
-    margin-left: -60px;
+ /*border: 1px red dashed;*/
 }
 
-.tooltip:hover .tooltiptext {
-    border: 1px solid gray;
-    visibility: visible;
-    background-color: rgba(255, 255, 255, 0.7);
-}*/
+.hide{ display: none }
+
+.popup{
+ height: 100px;
+ width: 100px;
+ background-color: white;
+ color: black;
+ border: 1px solid black;
+}
