--- a/src/components/assets/subcomponent/Popup_deployedHome.css
+++ b/src/components/assets/subcomponent/Popup_deployedHome.css
@@ -15,11 +15,11 @@
 
 .popup{
  height: 250px;
- width: 450px;
+ width: 550px;
  background-color: white;
  color: black;
  border: 1px solid black;
- border-radius: 5px;
+ border-radius: 10px;
  position: relative;
  z-index: 1;
  box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.5)
@@ -31,17 +31,50 @@
  flex-direction: column;
  align-items: center;
  justify-content: center;
+ padding: 10px 0;
 }
+
+
 .row{
  height: 18px;
+ width: 100%;
+ display: flex;
+ flex-direction: row;
+ align-content: center;
+ justify-content:center;
+ flex: 1 0 auto;
+}
+.row > div:nth-child(1)  {
+ height: 100%;
+ width: 35%;
+ display: inline-block;
+}
+.row > div:nth-child(2)  {
+ height: 100%;
+ width: 65%;
+ display: inline-block;
+}
+
+.row > div:nth-child(1) > div {
+ height: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
- justify-content: center;
- flex: 1 0 auto;
+ justify-content: flex-end;
+}
+.row > div:nth-child(2) > div{
+ height: 100%;
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: flex-start;
+ padding-left: 10px;
+}
 
- /*border: 1px solid blue;*/
-
+input{
+ height: 80%;
+ width: 300px;
+ font-size: 14px;
 }
 
 .buttonHolder{
