--- a/src/components/assets/subcomponent/Popup_deployedHome.css
+++ b/src/components/assets/subcomponent/Popup_deployedHome.css
@@ -33,8 +33,6 @@
  justify-content: center;
  padding: 10px 0;
 }
-
-
 .row{
  height: 18px;
  width: 100%;
@@ -71,7 +69,7 @@
  padding-left: 10px;
 }
 
-input{
+.amtInput{
  height: 80%;
  width: 300px;
  font-size: 14px;
