--- a/src/components/assets/subcomponent/Popup_deployedHome.css
+++ b/src/components/assets/subcomponent/Popup_deployedHome.css
@@ -14,7 +14,7 @@
 .hide{ display: none }
 
 .popup{
- height: 250px;
+ height: 300px;
  width: 550px;
  background-color: white;
  color: black;
@@ -31,25 +31,37 @@
  flex-direction: column;
  align-items: center;
  justify-content: center;
- padding: 10px 0;
 }
-.row{
+.row, .col_2 {
  height: 18px;
  width: 100%;
  display: flex;
  flex-direction: row;
- align-content: center;
- justify-content:center;
+ align-items: center;
+ justify-content: center;
  flex: 1 0 auto;
+ margin-bottom: 5px;
 }
+
+.agreement{
+ height: 18px;
+ width: 100%;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ flex: 1 0 auto;
+ margin-top: 15px;
+}
+
 .row > div:nth-child(1)  {
  height: 100%;
- width: 35%;
+ width: 40%;
  display: inline-block;
 }
 .row > div:nth-child(2)  {
  height: 100%;
- width: 65%;
+ width: 60%;
  display: inline-block;
 }
 
@@ -69,23 +81,73 @@
  padding-left: 10px;
 }
 
+.col_2 > div:nth-child(1){
+ width: 20%;
+ height: 100%;
+ display: inline-block;
+}
+.col_2 > div:nth-child(2){
+ width: 35%;
+ height: 100%;
+ display: inline-block;
+}
+.col_2 > div:nth-child(3){
+ width: 10%;
+ height: 100%;
+ display: inline-block;
+}
+.col_2 > div:nth-child(4){
+ width: 45%;
+ height: 100%;
+ display: inline-block;
+}
+
+.col_2 > div:nth-child(1) > div {
+ height: 100%;
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: flex-end;
+}
+.col_2 > div:nth-child(2) > div{
+ height: 100%;
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: flex-start;
+ padding-left: 10px;
+}
+.col_2 > div:nth-child(3) > div {
+ height: 100%;
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: flex-end;
+}
+.col_2 > div:nth-child(4) > div{
+ height: 100%;
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: flex-start;
+ padding-left: 10px;
+}
+
+
 .amtInput{
  height: 80%;
- width: 300px;
+ width: 250px;
  font-size: 14px;
 }
 
 .buttonHolder{
- height: 18px;
+ height: 70px;
  width: 100%;
 
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
- flex: 4 0 auto;
-
- /*border: 1px solid blue;*/
 }
 .cancelBtn, .confirmBtn{
   border-radius: 16px;
