--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -6,7 +6,6 @@
 
  flex-direction: column;
  }
-
 .RowGroup{
  border-collapse: collapse;
  display: flex;
@@ -14,13 +13,11 @@
 
  flex-direction: row;
  }
-
 .Row{
  display: flex;
  flex-direction: row;
  flex: 1 0 auto;
 }
-
 .DataRowCell{
  display: flex;
  flex-direction: row;
@@ -28,36 +25,11 @@
  font-size: 13px;
  line-height: 16px;
  padding-left: 3px;
- /*text-indent: 5px;*/
 }
-
-.CellVisibleNoBreak {
- white-space: nowrap;
- text-overflow: ellipsis;
-}
-.CellVisible {
- text-overflow: visible;
- overflow-wrap: normal;
- word-break: keep-all;
-}
-
-.CellEllipsis {
- white-space: nowrap;
- overflow: hidden;
- text-overflow: ellipsis;
-}
-
-/* ----- AssetsDeployedTableView ----- */
-/*Navbars*/
-.RegCptyColGroupStyle{
- border-right: 1px white solid;
-}
-
 .DataBlock{
  padding-bottom: 2px;
  border-bottom: 1px solid #979797;
 }
-
 .DataRow{
  border-bottom: 1px solid #979797;
  -webkit-transition: background-color 250ms linear;
@@ -71,6 +43,26 @@
 }
 .DataRow:active{
  background-color: #c3ddf5;
+}
+.CellVisibleNoBreak {
+ white-space: nowrap;
+ text-overflow: ellipsis;
+}
+.Cell_Overflow_Visible {
+ text-overflow: visible;
+ overflow-wrap: normal;
+ word-break: keep-all;
+}
+.CellEllipsis {
+ white-space: nowrap;
+ overflow: hidden;
+ text-overflow: ellipsis;
+}
+
+/* ----- AssetsDeployedTableView ----- */
+/*Navbars*/
+.RegCptyColGroupStyle{
+ border-right: 1px white solid;
 }
 
 .RegCptyHead{
