--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -12,6 +12,7 @@
  flex: 0 0 auto;
 
  flex-direction: row;
+ /*position: relative;*/
  }
 .Row{
  display: flex;
@@ -110,4 +111,14 @@
  background-color: #2b3c4c;
  color: white;
  border-right: 1px solid white
+}
+
+/* Fade Screen */
+.FadeScreen_Anchor{
+ position: relative;
+}
+.FadeScreen{
+ width: 100%; height: 100%;
+ position: absolute;
+ background-color: rgba(255,255,255,0.9);
 }
