--- a/src/components/assets/subcomponent/Popup_deployedHome.css
+++ b/src/components/assets/subcomponent/Popup_deployedHome.css
@@ -18,11 +18,11 @@
  width: 550px;
  background-color: white;
  color: black;
- border: 1px solid #1c2124;
+ border: 1px solid #dedede;
  border-radius: 10px;
  position: relative;
  z-index: 1;
- box-shadow: 3px 3px 5px 1px rgba(28, 33, 36, 0.8)
+ box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.5)
 }
 .contentHolder{
  height:100%;
@@ -137,7 +137,7 @@
 }
 .cancelBtn, .confirmBtn{
   border-radius: 16px;
-  border:1px solid  #1c2124;
+  border:1px solid #979797;
   font-weight: bold;
 
   display: flex;
