OW-648 [LOGIC] Temporarily switched to mockData

--- a/src/components/pledge/Pledge.css
+++ b/src/components/pledge/Pledge.css
@@ -227,6 +227,10 @@
   height: 16px;
 }
 
+.caveats{
+ color: white;
+}
+
 .collateralExpandRow > .collateralCell,
 .collateralExpandEarmarkedRow > .collateralCell{
   border-top-style: solid;
