--- a/src/pages/login/LoginPage.css
+++ b/src/pages/login/LoginPage.css
@@ -1,4 +1,7 @@
 .page {
+ height: 100%;
   display: flex;
-  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
