--- a/src/components/twoFA/TwoFA.css
+++ b/src/components/twoFA/TwoFA.css
@@ -1,19 +1,18 @@
 .container {
-  display: flex;
-  flex: 1;
-  height: 100%;
 
-  /*transform: translateY();*/
+ display: flex;
+ flex-direction: row;
+ flex: 0 0 auto;
+
+  border: 2px solid red;
 }
 
 .box {
-  flex: 1;
-  /*align-self: center;*/
-  min-height: 200px;
-  max-height: 600px;
-  width: 10%;
-  min-width: 150px;
-  max-width: 350px;
+ flex: 1 0 auto;
+ min-height: 200px;
+ max-height: 500px;
+ min-width: 350px;
+ max-width: 400px;
   background-color: #fff;
   margin: auto;
   border-radius: 10px;
@@ -68,9 +67,9 @@
   background-color: #dedede;
   border: 0;
   font-size: 18px;
-  /*text-indent: 24px;*/
   padding: 0 24px;
   color: #777777;
+  height: 3em;
 }
 
 .input input:focus {
