--- a/src/pages/twoFA/TwoFA_Page.css
+++ b/src/pages/twoFA/TwoFA_Page.css
@@ -1,4 +1,9 @@
 .page{
- display: flex;
  height: 100%;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+
+ border: 2px solid green;
 }
