OW-493 - show scroll for agreements create

--- a/src/components/assets-flight/sub-components/FlightItemTable.css
+++ b/src/components/assets-flight/sub-components/FlightItemTable.css
@@ -13,7 +13,7 @@
  -moz-scrollbars-vertical: hidden;
 }
 
-::-webkit-scrollbar {
+.flightItemTableWindow::-webkit-scrollbar {
   display: none;
 }
 
