--- a/src/components/common/SimpleCenteredPopup.css
+++ b/src/components/common/SimpleCenteredPopup.css
@@ -1,33 +1,34 @@
 /* https://www.w3schools.com/howto/howto_css_modals.asp */
 .overlay {
-    /*display: none; !* Hidden by default *!*/
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-    display: flex;
+  /*display: none; !* Hidden by default *!*/
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  display: flex;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 .popContainer {
-    composes: popupContainer from '../../static/commonStyles/common.css';
-    margin: auto;
-    height: 405px;
-    width: 800px;
-    overflow: auto;
-    position: relative;
+  composes: popupContainer from '../../static/commonStyles/common.css';
+  margin: auto;
+  height: 405px;
+  width: 800px;
+  overflow: auto;
+  position: relative;
 }
 
 .closeButton {
-    color: #585858;
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 25px;
-    cursor: pointer;
-    margin: 5px;
+  color: #585858;
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 25px;
+  cursor: pointer;
+  margin: 5px;
 }
