--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -81,12 +81,24 @@
   text-align: center;
   font-size: 16px;
   letter-spacing: 2px;
-  text-shadow: 0 1px 1px #0875a1;
   width: 100%;
   border: 0;
   cursor: pointer;
+  outline: none;
 }
 
 .buttonHolder button:hover {
   background-color: #007b04;
+}
+
+.buttonHolder button.disabled{
+  color: #d7dce0;
+  background-color: #FAFAFA;
+  border: 1px solid #d7dce0;
+  cursor: default;
+}
+
+.buttonHolder button.disabled:hover {
+  background-color: #FAFAFA;
+  border: 1px solid #d7dce0;
 }
