--- a/src/components/assets-flight/sub-components/FlightItem.css
+++ b/src/components/assets-flight/sub-components/FlightItem.css
@@ -47,3 +47,10 @@
   height: 29px;
   margin-left: 8px;
 }
+
+.headerDates div {
+  display: inline-block;
+  font-size: 14px;
+  color: #979797;
+  line-height: 17px;
+}
