OW-655 - unlocked pledge max width - fixed AppWrapper issue with 100% height

--- a/src/components/AppWrapper/AppWrapper.css
+++ b/src/components/AppWrapper/AppWrapper.css
@@ -1,9 +1,12 @@
 .blurWrapper {
   position: relative;
+  height: 100%;
 }
 
 .blurrer{
   transition: filter 0.5s ease;
+  height: 100%;
+
 }
 
 .blur {
