--- a/src/components/assets/Assets.css
+++ b/src/components/assets/Assets.css
@@ -1,20 +1,27 @@
-.assetsComponent{
-    display: flex;
-    flex-direction: row;
-    padding: 30px 10px 0 10px;
-    position: relative;
+.assetsComponent {
+  display: flex;
+  flex-direction: row;
+  padding: 30px 10px 0 10px;
+  position: relative;
 }
 
-.assetsPanels{
- width: calc(100% / 2);
- padding: 0 10px;
+.assetsPanels {
+  width: calc(100% / 2);
+  padding: 0 10px;
+  -webkit-transition: width 0.3s; /* For Safari 3.1 to 6.0 */
+  transition: width 0.3s;
 }
 
-.assetsPanelDeployed{
- padding: 0 10px;
- width: 75%
+.assetsPanelDeployed {
+  padding: 0 10px;
+  width: 75%;
+  -webkit-transition: width 0.3s; /* For Safari 3.1 to 6.0 */
+  transition: width 0.3s;
 }
-.assetsPanelHome{
- padding: 0 10px;
- width: 25%
+
+.assetsPanelHome {
+  padding: 0 10px;
+  width: 25%;
+  -webkit-transition: width 0.3s; /* For Safari 3.1 to 6.0 */
+  transition: width 0.3s;
 }
