--- a/src/components/pledge/Pledge.css
+++ b/src/components/pledge/Pledge.css
@@ -144,10 +144,14 @@
 
 .expandDivR{
   flex: 7;
+  -webkit-transition: flex 0.3s; /* For Safari 3.1 to 6.0 */
+  transition: flex 0.3s;
 }
 
 .minDivR{
   flex: 4;
+  -webkit-transition: flex 0.3s; /* For Safari 3.1 to 6.0 */
+  transition: flex 0.3s;
 }
 
 .hideCol{
